--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".WordsApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,6 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RoomWordLab3"
         tools:targetApi="31">
+        <activity
+            android:name=".NewWordActivity"
+            android:exported="false"
+            android:label="@string/title_activity_new_word"
+            android:theme="@style/Theme.RoomWordLab3" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
